new project piroll for tests

--- a/bhagaskara/styles/media.css
+++ b/bhagaskara/styles/media.css
@@ -27,19 +27,19 @@
     }
 
     .menu_icon {
-    	display: none;
+        display: none;
     }
 }
 
 @media only screen and (max-width: 1024px) {
 
-	nav {
-		float: none;
-	}
+    nav {
+        float: none;
+    }
 
-	.navbar img {
-		float: none;
-	}
+    .navbar img {
+        float: none;
+    }
 
     .navbar_images {
         flex-wrap: wrap;
@@ -55,7 +55,7 @@
     }
 
     .about_us_describe button {
-        margin-top: 20px;	
+        margin-top: 20px;
     }
 
     .about_us_describe {
@@ -67,33 +67,33 @@
     }
 
     .about_us_describe p {
-    	text-align: justify;
+        text-align: justify;
+    }
+
+    .address_informations .social_icons {
+        margin: 70px auto 0;
+    }
+
+    .address_informations>p:nth-child(1) {
+        text-align: justify;
+    }
+
+    .address_informations>p:nth-child(2),
+    .address_informations>p:nth-child(3),
+    .address_informations>p:nth-child(4),
+    .address_informations>p:nth-child(5) {
+        text-align: center;
     }
 }
 
 @media only screen and (max-width: 768px) {
-	
-    .address_informations .social_icons {
-		margin: 70px auto 0;
-	}
-
-	.address_informations > p:nth-child(1) {
-		text-align: justify;
-	}
-
-    .address_informations > p:nth-child(2),
-	.address_informations > p:nth-child(3),
-	.address_informations > p:nth-child(4),
-	.address_informations > p:nth-child(5) {
-		text-align: center;
-	}
 
     header img {
         width: 80%;
     }
 
     .services_items {
-    	padding-bottom: 150px;
+        padding-bottom: 150px;
     }
 
     .services_item {
@@ -102,6 +102,14 @@
 
     .our_skills_item {
         margin: 20px 10px 0 10px;
+    }
+
+    .our_team_item {
+        margin:20px 15px;
+    }
+
+    .our_team_item h3 {
+        margin-top: 45px;
     }
 }
 
@@ -124,57 +132,57 @@
     }
 
     .white_block {
-    	height: 25px;
+        height: 25px;
     }
 
-	.portfolio_categories li {
-		margin-bottom: 20px;
-	}
+    .portfolio_categories li {
+        margin-bottom: 20px;
+    }
 
     .services_items {
-    	padding-bottom: 120px;
+        padding-bottom: 120px;
     }
 
     .about_us {
-    	padding-top: 65px;
-    	padding-bottom: 120px;
+        padding-top: 65px;
+        padding-bottom: 120px;
     }
 
     .about_us_content {
-    	margin-top: 70px;
+        margin-top: 70px;
     }
 
     .our_team {
-    	padding-top: 75px;
+        padding-top: 75px;
     }
 
     .our_team_arrow {
-    	margin:60px auto;
+        margin: 60px auto;
     }
 
     .our_skills {
-    	padding-bottom: 100px;
+        padding-bottom: 100px;
     }
 
     .our_skills_items {
-    	margin-top: 100px;
+        margin-top: 100px;
     }
 
     .our_portfolio {
-    	padding-bottom: 95px;
+        padding-bottom: 95px;
     }
 
     .get_in_touch .header_image {
-		margin-bottom: 85px;
+        margin-bottom: 85px;
     }
 
     footer {
-    	padding:100px 0;
+        padding: 100px 0;
     }
 }
 
 @media only screen and (max-width: 320px) {
-	.our_skills_item .progress {
+    .our_skills_item .progress {
         width: 220px;
     }
 }
