--- a/bhagaskara/styles/styles.css
+++ b/bhagaskara/styles/styles.css
@@ -80,7 +80,7 @@ header h2 {
 
 .navbar_images {
     display: flex;
-    justify-content:space-around; 
+    justify-content: space-around;
     margin: 0 auto;
     max-width: 1170px;
     margin-top: 115px;
@@ -159,7 +159,7 @@ header h2 {
     background-repeat: no-repeat;
     width: 86px;
     height: 93px;
-    margin:20px auto;
+    margin: 20px auto;
     vertical-align: middle;
     position: relative;
 }
@@ -225,7 +225,7 @@ nav a:hover {
 }
 
 .services_items {
-    background:#eeeeee;
+    background: #eeeeee;
     padding-top: 165px;
     padding-bottom: 230px;
 }
@@ -241,7 +241,7 @@ nav a:hover {
     padding: 0 10px;
 }
 
-.services_item > div {
+.services_item>div {
     cursor: pointer;
 }
 
@@ -259,11 +259,14 @@ nav a:hover {
     margin-top: 44px;
 }
 
-.heart, .diamond, .coffee, .phone {
+.heart,
+.diamond,
+.coffee,
+.phone {
     height: 186px;
     width: 172px;
     background-repeat: no-repeat;
-    margin:0 auto;
+    margin: 0 auto;
 }
 
 .heart {
@@ -381,7 +384,7 @@ nav a:hover {
     margin: 120px auto;
 }
 
-.our_team_arrow > img {
+.our_team_arrow>img {
     cursor: pointer;
 }
 
@@ -472,13 +475,13 @@ nav a:hover {
 }
 
 progress::-webkit-progress-bar {
-  background: #F0F0F0;
-  /*box-shadow: 0 2px 3px rgba(0,0,0,0.2) inset;*/
-  border-radius: 3px;
+    background: #F0F0F0;
+    /*box-shadow: 0 2px 3px rgba(0,0,0,0.2) inset;*/
+    border-radius: 3px;
 }
 
 progress::-webkit-progress-value {
-  background-color: #9F449B;
+    background-color: #9F449B;
 }
 
 .messages {
@@ -620,7 +623,7 @@ progress::-webkit-progress-value {
     text-align: center;
     font-family: 'Lato', sans-serif;
     font-size: 18px;
-    line-height: 36px;   
+    line-height: 36px;
     color: #222222;
     cursor: pointer;
 }
@@ -669,7 +672,7 @@ progress::-webkit-progress-value {
     margin-top: 57px;
 }
 
-.get_in_touch .header_image{
+.get_in_touch .header_image {
     text-align: center;
 }
 
@@ -720,7 +723,7 @@ progress::-webkit-progress-value {
     width: 80%;
 }
 
-.address_informations > p:nth-child(1) {
+.address_informations>p:nth-child(1) {
     font-family: "Times New Roman";
     font-size: 23px;
     line-height: 31px;
@@ -728,10 +731,10 @@ progress::-webkit-progress-value {
     text-align: left;
 }
 
-.address_informations > p:nth-child(2),
-.address_informations > p:nth-child(3),
-.address_informations > p:nth-child(4),
-.address_informations > p:nth-child(5) {
+.address_informations>p:nth-child(2),
+.address_informations>p:nth-child(3),
+.address_informations>p:nth-child(4),
+.address_informations>p:nth-child(5) {
     font-family: "Times New Roman";
     font-size: 22px;
     font-weight: bold;
@@ -740,11 +743,11 @@ progress::-webkit-progress-value {
     text-align: left;
 }
 
-.address_informations > p:nth-child(4) {
+.address_informations>p:nth-child(4) {
     margin-top: 50px;
 }
 
-.address_informations > p:nth-child(2) {
+.address_informations>p:nth-child(2) {
     margin-top: 63px;
 }
 
@@ -781,5 +784,5 @@ progress::-webkit-progress-value {
 
 footer {
     text-align: center;
-    padding:160px 0 115px 0;
+    padding: 160px 0 115px 0;
 }
