--- a/piroll/css/styles.css
+++ b/piroll/css/styles.css
@@ -18,7 +18,6 @@ a:hover {
 
 nav {
 	height: 100px;
-	/*border-bottom: 1px solid silver;*/
 }
 
 header {
@@ -33,6 +32,10 @@ header.zero{
 
 header section {
 	padding-top: 140px;
+}
+
+td > button > i{
+	color: #ffffff;
 }
 
 .describe {
@@ -134,7 +137,6 @@ header section {
 
 progress::-webkit-progress-bar {
 	background: #F0F0F0;
-	/*box-shadow: 0 2px 3px rgba(0,0,0,0.2) inset;*/
 	border-radius: 0;
 }
 
@@ -291,6 +293,10 @@ progress::-webkit-progress-value {
 	margin-bottom: 25px;
 }
 
+.border {
+	border: initial;
+}
+
 .form-message textarea {
 	min-height: 150px;
 }
@@ -431,8 +437,6 @@ footer .name-corporation {
 .admin-header {
 	background: url(../images/welcome.png) no-repeat center top / cover;
 	padding: 80px 0;
-	
-	/*opacity: 0.5;*/
 }
 
 .admin-header h1{
@@ -442,6 +446,10 @@ footer .name-corporation {
 	background: blue;
 }
 
-#data {
-	background: #EBEBEB;
+.data-id, .table-data, #delete-all {
+	display: none;
+}
+
+.table-data {
+	margin-top: 10px;
 }
